--- a/frontend/static/scss/partials/_variables.scss
+++ b/frontend/static/scss/partials/_variables.scss
@@ -102,9 +102,9 @@
     --padding-md: 20px;
     
     /* Evaluation Bar Offsets */
-    --eval-offset-desktop: 38px;  /* Reduced from 45px for taller bar */
+    --eval-offset-desktop: 38px; 
     --eval-offset-tablet: 55px;
-    --eval-offset-mobile: 48px;
+    --eval-offset-mobile: 55px;
     
     /* Button Group Spacing */
     --btn-group-margin: 10px;
